[package]
name = "check"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
solana-sdk = "1.18.14"
spl-token = "4.0.1"
spl-associated-token-account = "3.0.2"
bs58 = "0.5.1"
base64 = "0.22.1"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
